# 2025ML-spamEmail

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  Step.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  setup.cfg
.github/workflows/: ci.yml
.streamlit/: config.toml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
models/: best_spam_classifier.joblib  model_comparison.csv  spam_classifier.joblib
openspec/: project.md
openspec/changes/add-model-selection/: design.md  proposal.md  tasks.md
openspec/specs/model-selection/: spec.md
src/: __init__.py  advanced_preprocessing.py  app_streamlit.py  cli.py  data.py  enhanced_models.py  enhanced_train.py  models.py  preprocess.py  train.py
tests/: conftest.py  test_pipeline.py
