[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spam_classifier"
version = "0.0.1"
description = "A spam message classifier with Streamlit interface"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "nltk>=3.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "wordcloud>=1.9.0",
    "joblib>=1.1.0",
    "streamlit>=1.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
