[metadata]
name = spam_classifier
version = 0.0.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    numpy
    scikit-learn
    streamlit
    matplotlib
    seaborn

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.csv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
pythonpath = src
